# snap

./: .cproject  .gitattributes  .gitignore  .pre-commit-config.yaml  .project  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  README_usermodules  coding_conventions.md  conventions.md  install_usermodule.sh  install_usermodule_r8.sh  snapPkg.sh
docs/: CMakeLists.txt  Doxyfile
src/common/: CMakeLists.txt  allocateFields.F  allocateFields.f90  allocateFields.f90.wetdep2  argoswrite.f  argoswrite.f90  array_utils.f90  bldp.f  bldp.f90  c2fgetarg.f  c2fgetarg.f90  c2fgetvar.f  c2fgetvar.f90  checkDomain.f  checkDomain.f90  compheight.f  compheight.f90  copyfield.f  copyfield.f90  dateCalc.F90  dateCalc.f90  datetime.f90  decay.f  decay.f90  decayDeps.f  decayDeps.f90  drydep.f90  drydep1.f  drydep1.f90  drydep2.f  drydep2.f90  edcomp.f  edcomp.f90  ensemble.f  ensemble.f90  epinterp.f  epinterp.f90  feltio_dummy.f  feltio_dummy.f90  fileInfoML.f90  (+100 more)
src/common/graphics/: diColour.h  error  glFieldPlot.cc
src/common/milib/: CMakeLists.txt  chcase.f  earthr.f  getvar.f  gridpar.f  hrdiff.f  keywrd.f  lam2sph.f  lenstr.f  mapfield.f  mer2sph.f  pol2sph.f  prhelp.f  rlunit.f  rmfile.f  sph2rot.f  termchar.f  vtime.f  xyconvert.f
src/naccident/: CMakeLists.txt  Makefile  c2fgetvar.f  create_naccident_input  create_naccident_input.f  create_naccident_output.f  decay.f  diColour.cc  diFontManager.cc  diPlotOptions.h  diTesselation.c  ensemble.f  fldout.f  milib.h  snapdebug.inc  snapdim.inc  snaptab.inc
src/naccident/examples/: bomb.input  cdmGribReaderConfig_EC_N2.xml  felt2nc_variables.xml  nrpa_input.txt  release.txt  snap.input  snap.input.ecemep  snap.input.heightrelease  snap.input_archiveH12  snap.input_ecDet  snap.input_ecDet_fimex  snap.input_ecemep_fimex_split  snap.input_felt_nora_erainterim  snap.input_icon_fimex  snap.input_meps  snap.input_meps_fimex
src/naccident/examples/bench/: README.md  largestLandFraction_NrpaEC0p1.nc  snap_io.input  snap_particles.input
src/naccident/examples/era5/: Makefile  README.md  cdmGribReaderConfigEC_Era5.xml  download_ml.py  download_sfc.py  release.txt  snap.input  snap.input.NPP  snap_NPP.input
src/naccident/examples/gfs/: README.md  cdmGribReaderConfigGFS.xml  reduceDims.ncml  sigmaHybrid.ncml  snap.input
src/naccident/graphics/: diContouring.cc  diLinetype.h  diMapPlot.h
src/nbomb/: .gitignore  CMakeLists.txt  Makefile  argoswrite.f  bldp.f  c2fgetvar.f  create_bomb_input.f  decay.f  diFieldPlot.cc  drydep2-old.f  epinterp.f  filesort.f  fldout.f  forwrd.f  om2edot.f  posint.f  release.F  rwalk.F  snap.F  snapInterface.f  snapdim.inc  snapgrp.inc  snappos.inc
src/nbomb/examples/: bomb-input.txt  snap.input
src/nbomb/graphics/: GENERATE_MAP_DATA  MAPS  diArea.cc  diFontManager.h  diProjection.cc  gdata.f  grid_conc  grid_depo  grid_dose  map.f
src/traj/: CMakeLists.txt  Makefile  README  bsnap  create_traj_input  create_traj_input.f  decay.f  diMapPlot.cc  diRectangle.h  diTesselation.h  forwrd.f  glFieldPlot.h  make.ubuntu  pselect.f  release.F  rwalk.F  snap-dobry.F  snap.F  snappar.inc  wetdep2.F
src/traj/examples/: Test_barsebeck_TRAJ_input  nrpa.input  snap.input
src/traj/graphics/: diProjection.h  diRectangle.cc  gra.sh  tr.f
utils/SnapPy/: .project  MainBrowserWindow.py  MainBrowserWindow.py~  README.md  Resources.py  Resources.py~  SnapController.py  __main__.py  calcTotalAsh.py  debpkg.sh  eemepModelRunner  nc2grib.py  setup.cfg  setup.py  snap4rimsterm  snapAddBombIsotopes.py  snapAddToa  snapCombineInverse  snapEnsAshPlot.py  snapEnsPlot.py  snapNc2grib.py  snapPy  snapRemoteRunner.py  snapRunnerNpp  snapRunnerNpps  tox.ini
utils/SnapPy/METNO/: Alvin.py  DirectConnection.py  Frost.py  HPC.py  PBSQueue.py  PPI.py  PPI_CentOS7_Direct.py  PPI_Direct.py  PPI_R8B.py  PPI_R8B_Direct.py  PPI_R8_Direct.py  SGEQueue.py  SLURMQueue.py  SSHConnection.py  Stratus.py  Vilje.py  __init__.py
utils/SnapPy/Snappy/: ActivityHeightDistribution.py  AddBombIsotopes.py  AddToa.py  BombIsotopeFractions.py  BrowserWidget.py  Countries.py  EcMeteorologyCalculator.py  ICONMeteorologyCalculator.py  Isotopes.py  MailImages.py  MainBrowserWindow.py  MeteorologyCalculator.py  Resources.py  ResourcesCommon.py  SnapController.py  SnapControllerInverse.py  SnapInputBomb.py  SnapJob.py  SnapJobEC.py  Utils.py  __init__.py  read_dosecoefficients_icrp.py
utils/SnapPy/Snappy/EEMEP/: ColumnSouce2SNAPRelease.py  Controller.py  ModelRunner.py  NppRun.py  PostProcess.py  Resources.py  SixHourMax.py  SnapAshResources.py  SnapAshRunner.py  SnapVolcanoTranslator.py  VolcanoRun.py
utils/SnapPy/Snappy/resources/: .gitignore  aggregate_landclasses.py  bomb-isotope-distribution_Tovedal.csv  cdmGribWriterIsotopesTemplate.xml  convert_largest_fraction_esa_to_snap.py  esa_to_snap.csv  europe.csv  europe2.csv  europe3.txt  fillValue_template.ncml  get_largest_landfraction_MEPS.sh  icon_fimex.cfg  icon_sigma_hybrid.ncml  isotope_list.txt  isotopes_template.xml  largestLandFraction_EC.nc  largestLandFraction_MEPS_byte.nc  largestLandFraction_esa2ecemep.nc  largestLandFraction_esa2icon0p25global.nc  lustredir_serviceenv.sh  metproductiondir_serviceenv.sh  npps.csv  radnett.csv  removeSnapReferenceTime.ncml  sendmail.sh  snap.in  snap.input.tmpl  snap.input_ec_0p1.tmpl  snap.input_era5_nancy.tmpl  (+7 more)
utils/SnapPy/debian/: changelog  control
utils/SnapPy/debian.bionic/: changelog  control  rules
utils/SnapPy/debian.jammy/: changelog  control  rules
utils/SnapPy/debian.noble/: changelog  control
utils/SnapPy/debian.xenial/: changelog  control  rules
utils/SnapPy/resources/: npps.csv  startScreen.html
utils/SnapPy/snapscripts/: eemepModelRunner.py  snap4rimsterm.py  snapCombineInverse.py  snapEnsPlot.py  snapNc2grib.py  snapPy.py  snapRemoteRunner.py  snapRunnerNpp.py  snapRunnerNpps.py
utils/SnapPy/test/: createArgos2Snap.py  getECmetfiles_test.py
utils/SnapPy/tests/: .gitignore  getECGlobalmetfiles_test.py  getECmetfiles_test.py  getMEPSmetfiles_test.py  islatlon_test.py  restrictDomainSizeAndResolution_test.py
(+520 files in other folders)
