[metadata]
name = Snappy
version = 2.1.10
description = SNAP utilities in python
url = https://gitlab.met.no/emep/snap
author = Heiko Klein
author_email = Heiko.Klein@met.no
license = GPL-3.0-only

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    netCDF4
    numpy

[options.package_data]
Snappy =
    resources/*
Snappy.EEMEP =
    resources/*

[options.entry_points]
gui_scripts =
    snapPy = snapscripts.snapPy:main
console_scripts =
    snap4rimsterm = snapscripts.snap4rimsterm:main
    snapAddToa = snappy.AddToa:main
    snapCombineInverse = snapscripts.snapCombineInverse:main
    snapNc2grib = snapscripts.snapNc2grib:main
    snapRunnerNpps = snapscripts.snapRunnerNpps:main
    snapRunnerNpp = snapscripts.snapRunnerNpp:main
    eemepModelRunner = snapscripts.eemepModelRunner:main
    snapRemoteRunner = snapscripts.snapRemoteRunner:main
    snapEnsPlot = snapscripts.snapEnsPlot:main


[options.extras_require]
gui =
    cartopy
    # PyQt5
    # PyQtWebKit
